--- a/packages/tldraw/package.json
+++ b/packages/tldraw/package.json
@@ -55,9 +55,11 @@
     "browser-fs-access": "^0.31.0",
     "idb-keyval": "^6.2.0",
     "perfect-freehand": "^1.2.0",
+    "primereact": "^9.3.0",
     "react-error-boundary": "^3.1.4",
     "react-hotkeys-hook": "^3.4.7",
     "react-intl": "^6.1.1",
+    "styled-components": "^5.3.10",
     "tslib": "^2.4.0",
     "zustand": "^4.1.1"
   },
@@ -72,6 +74,7 @@
     "@types/node": "^17.0.14",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "react": "^18.2.0",
