--- a/packages/tldraw/package.json
+++ b/packages/tldraw/package.json
@@ -55,6 +55,7 @@
     "browser-fs-access": "^0.31.0",
     "idb-keyval": "^6.2.0",
     "perfect-freehand": "^1.2.0",
+    "primeicons": "^6.0.1",
     "primereact": "^9.3.0",
     "react-error-boundary": "^3.1.4",
     "react-hotkeys-hook": "^3.4.7",
