--- a/.gitignore
+++ b/.gitignore
@@ -72,8 +72,8 @@ apps/examples/www/translations
 !.yarn/versions
 
 packages/*/api
-apps/examples/www/index.css
-apps/examples/www/index.js
 .tsbuild
 
 apps/examples/build.esbuild.json
+/apps/social-video-board/environments/
+/packages/edubreak/src/lib/environment.ts
