--- a/apps/social-video-board/tsconfig.json
+++ b/apps/social-video-board/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"extends": "../../config/tsconfig.base.json",
-	"include": ["src", "./vite.config.ts"],
+	"include": ["services", "environments", "src", "./vite.config.ts"],
 	"exclude": ["node_modules", "dist", "**/*.css", ".tsbuild*", "./scripts/legacy-translations"],
 	"compilerOptions": {
 		"outDir": "./.tsbuild"
