--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -12,6 +12,7 @@
 		{ "path": "../editor" },
 		{ "path": "../primitives" },
 		{ "path": "../tlsync-client" },
-		{ "path": "../utils" }
+		{ "path": "../utils" },
+		{ "path": "../edubreak" }
 	]
 }
