--- a/packages/editor/tsconfig.json
+++ b/packages/editor/tsconfig.json
@@ -15,6 +15,7 @@
 		{ "path": "../tlschema" },
 		{ "path": "../tlstore" },
 		{ "path": "../tlvalidate" },
+		{ "path": "../edubreak" },
 		{ "path": "../utils" }
 	]
 }
