--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -62,7 +62,9 @@
 		"classnames": "^2.3.2",
 		"hotkeys-js": "^3.9.4",
 		"idb": "^7.1.1",
-		"lz-string": "^1.4.4"
+		"lz-string": "^1.4.4",
+		"primeicons": "^6.0.1",
+		"primereact": "^9.4.0"
 	},
 	"peerDependencies": {
 		"react": "^18",
