--- a/packages/edubreak/package.json
+++ b/packages/edubreak/package.json
@@ -39,8 +39,8 @@
 		"lint": "yarn run -T tsx ../../scripts/lint.ts"
 	},
 	"dependencies": {
-		"core-js": "^3.27.2",
-		"@tldraw/tlstore": "workspace:*"
+		"@tldraw/tlstore": "workspace:*",
+		"core-js": "^3.27.2"
 	},
 	"devDependencies": {
 		"lazyrepo": "0.0.0-alpha.26"
