--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -62,6 +62,7 @@
 		"classnames": "^2.3.2",
 		"hotkeys-js": "^3.9.4",
 		"idb": "^7.1.1",
+		"lodash": "^4.17.21",
 		"lz-string": "^1.4.4",
 		"primeicons": "^6.0.1",
 		"primereact": "^9.4.0"
