--- a/apps/social-video-board/package.json
+++ b/apps/social-video-board/package.json
@@ -40,6 +40,7 @@
 	"dependencies": {
 		"@tldraw/assets": "workspace:*",
 		"@tldraw/tldraw": "workspace:*",
+		"node-gyp": "^9.4.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.9.0",
